# slingshot

./: .gitignore  .gitmodules  README.md
cli/: Cargo.toml
cli/src/: main.rs
script/: Deploy.s.sol  DeployBeaconProxy.s.sol  Interop.s.sol  PaymasterTokenTest.s.sol
src/: CrossPaymaster.sol  Greeter.sol  InteropCenter.sol  MyImplementation.sol  PaymasterToken.sol
test/: PaymasterTokenTest.t.sol
